<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <include layout = "@layout/activity_image"/>

<LinearLayout
    android:id="@+id/activity_playlists"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    tools:context="com.example.android.musicapp.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_playlists"
            android:id="@+id/tVPlaylists"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal|bold|italic"
            android:textColor="@color/color_bg_sv"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>

    </RelativeLayout>

    <LinearLayout
        style="@style/LinearLayout"
        android:orientation="horizontal">

        <Button
            android:text="@string/sad_songs"
            android:id="@+id/sadsong"
            android:layout_below="@+id/tVPlaylists"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:text="@string/happy_songs"
            android:id="@+id/happysong"
            android:layout_height="150dp"

            android:layout_below="@+id/sadsong"
            android:layout_toRightOf="@id/sadsong"
            android:layout_alignParentTop="true"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout"
        android:orientation="horizontal">

        <Button
            android:text="@string/party_songs"
            android:id="@+id/partysong"
            android:layout_below="@+id/happysong"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <Button
            android:text="@string/romantic_songs"
            android:layout_below="@+id/partysong"
            android:id="@+id/romanticsong"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

    </LinearLayout>

    <include layout = "@layout/activity_footer" />

</LinearLayout>

</RelativeLayout>
